syntax = "proto3";

package user.v1;
option go_package = "user/v1;userv1";

import "google/protobuf/timestamp.proto";

message User {
    int64 id = 1;
    string email = 2;
    string nickname = 3;
    string password = 4;
    string phone = 5;
    google.protobuf.Timestamp created_at = 6;
    uint32 user_type = 7;
    WechatInfo wechat_info = 8;
}

message WechatInfo {
    string open_id = 1;
    string union_id = 2;
}

service UserService {
    rpc FindOrCreateByPhone(FindOrCreateByPhoneRequest) returns (FindOrCreateByPhoneResponse);
    rpc FindOrCreateByWechat(FindOrCreateByWechatRequest) returns (FindOrCreateByWechatResponse);
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc UpdateNonSensitiveInfo(UpdateNonSensitiveInfoRequest) returns (UpdateNonSensitiveInfoResponse);
    rpc Profile(ProfileRequest) returns (ProfileResponse);
}

message FindOrCreateByPhoneRequest {
    string phone = 1;
}

message FindOrCreateByPhoneResponse {
    User user = 1;
}

message FindOrCreateByWechatRequest {
    WechatInfo info = 1;
}

message FindOrCreateByWechatResponse {
    User user = 1;
}

message SignUpRequest {
    User user = 1;
}

message SignUpResponse {
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    User user = 1;
}

message UpdateNonSensitiveInfoRequest {
    User user = 1;
}

message UpdateNonSensitiveInfoResponse {
}

message ProfileRequest {
    int64 id = 1;
}

message ProfileResponse {
    User user = 1;
}